--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 
             // Adatok küldése a szerverre AJAX segítségével
             const xhr = new XMLHttpRequest();
-            xhr.open("POST", "https://amber-gwenni-53.tiiny.site/", true);  // Itt add meg a saját szerver címedet
+            xhr.open("POST", "http://localhost:3000/login", true);  // Itt add meg a saját szerver címedet
             xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
             xhr.send(JSON.stringify({
                 email: email,
