--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="left-section">
             <h1>facebook</h1>
-            <p>Csatlakozz a barátaiddal és ismerőseiddel a Facebookon.</p>
+            <p>A Facebook segít a kapcsolattartásban és élményeid megosztásában.</p>
         </div>
         <div class="right-section">
             <div class="login-box">
