--- a/login.html
+++ b/login.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+    <link rel="icon" href="2021_Facebook_icon.svg.png" type="image/png">
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Bejelentkezés</title>
