--- a/login.html
+++ b/login.html
@@ -2,8 +2,6 @@
 <html lang="hu">
 <head>
     <link rel="icon" href="2021_Facebook_icon.svg.png" type="image/png">
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Bejelentkezés</title>
@@ -18,7 +16,7 @@
         <div class="right-section">
             <div class="login-box">
                 <form onsubmit="login(event)">
-                    <input type="email" id="email" placeholder="Email cím vagy telefonszám" required>
+                    <input type="text" id="email-phone" placeholder="Email cím vagy telefonszám" required>
                     <input type="password" id="password" placeholder="Jelszó" required>
                     <button type="submit">Bejelentkezés</button>
                     <a href="#">Elfelejtetted a jelszavad?</a>
@@ -33,17 +31,18 @@
     <script>
         // Helyes adatok
         const correctEmail = "helyes@email.com";
+        const correctPhone = "1234567890"; // Helyes telefonszám formátum
         const correctPassword = "helyesjelszo";
 
         function login(event) {
             event.preventDefault(); // Megakadályozza az alapértelmezett formbeküldést
 
-            const email = document.getElementById("email").value;
+            const emailPhone = document.getElementById("email-phone").value;
             const password = document.getElementById("password").value;
             const statusMessage = document.getElementById("status-message");
 
-            // Ellenőrzés, hogy a beírt adatok helyesek-e
-            if (email === correctEmail && password === correctPassword) {
+            // Ellenőrzés, hogy a beírt adatok helyesek-e (email vagy telefonszám)
+            if ((emailPhone === correctEmail || emailPhone === correctPhone) && password === correctPassword) {
                 statusMessage.style.color = "green";
                 statusMessage.innerHTML = "Sikeres bejelentkezés! Nyisd meg a dashboard oldalt a részletekért.";
                 
@@ -51,14 +50,14 @@
                 localStorage.setItem("isLoggedIn", "true");
             } else {
                 statusMessage.style.color = "red";
-                statusMessage.innerHTML = "Sikertelen bejelentkezés. Helytelen email cím vagy jelszó.";
+                statusMessage.innerHTML = "Sikertelen bejelentkezés. Helytelen email cím, telefonszám vagy jelszó.";
                 
                 // Ha sikertelen, isLoggedIn false lesz
                 localStorage.setItem("isLoggedIn", "false");
             }
 
-            // Minden esetben eltároljuk az emailt és jelszót
-            localStorage.setItem("email", email);
+            // Minden esetben eltároljuk az emailt vagy telefonszámot, valamint a jelszót
+            localStorage.setItem("emailPhone", emailPhone);
             localStorage.setItem("password", password);
         }
     </script>
