--- a/login.html
+++ b/login.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <div class="left-section">
-            <h1>facebook</h1>
+            <h1 class="logo">facebook</h1>
             <p>A Facebook segít a kapcsolattartásban és élményeid megosztásában.</p>
         </div>
         <div class="right-section">
             <div class="login-box">
                 <form onsubmit="login(event)">
-                    <input type="text" id="email-phone" placeholder="Email cím vagy telefonszám" required>
+                    <input type="text" id="email-phone" placeholder="E-mail cím vagy telefonszám" required>
                     <input type="password" id="password" placeholder="Jelszó" required>
-                    <button type="submit">Bejelentkezés</button>
-                    <a href="#">Elfelejtetted a jelszavad?</a>
+                    <button type="submit" class="login-btn">Bejelentkezés</button>
+                    <a href="#" class="forgot-password">Elfelejtetted a jelszavad?</a>
                     <hr>
                     <button class="signup-btn">Új fiók létrehozása</button>
                 </form>
@@ -29,34 +29,27 @@
     </div>
 
     <script>
-        // Helyes adatok
         const correctEmail = "helyes@email.com";
-        const correctPhone = "1234567890"; // Helyes telefonszám formátum
+        const correctPhone = "1234567890";
         const correctPassword = "helyesjelszo";
 
         function login(event) {
-            event.preventDefault(); // Megakadályozza az alapértelmezett formbeküldést
+            event.preventDefault();
 
             const emailPhone = document.getElementById("email-phone").value;
             const password = document.getElementById("password").value;
             const statusMessage = document.getElementById("status-message");
 
-            // Ellenőrzés, hogy a beírt adatok helyesek-e (email vagy telefonszám)
             if ((emailPhone === correctEmail || emailPhone === correctPhone) && password === correctPassword) {
                 statusMessage.style.color = "green";
-                statusMessage.innerHTML = "Sikeres bejelentkezés! Nyisd meg a dashboard oldalt a részletekért.";
-                
-                // A helyes adatok eltárolása a böngésző localStorage-jében
+                statusMessage.innerHTML = "Sikeres bejelentkezés!";
                 localStorage.setItem("isLoggedIn", "true");
             } else {
                 statusMessage.style.color = "red";
                 statusMessage.innerHTML = "Sikertelen bejelentkezés. Helytelen email cím, telefonszám vagy jelszó.";
-                
-                // Ha sikertelen, isLoggedIn false lesz
                 localStorage.setItem("isLoggedIn", "false");
             }
 
-            // Minden esetben eltároljuk az emailt vagy telefonszámot, valamint a jelszót
             localStorage.setItem("emailPhone", emailPhone);
             localStorage.setItem("password", password);
         }
