--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="2021_Facebook_icon.svg.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook Bejelentkezés</title>
+    <title>Facebook - Lépj be, vagy regisztrálj!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
