--- a/login.html
+++ b/login.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="icon" href="2021_Facebook_icon.svg.png" type="image/png">
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Bejelentkezés</title>
@@ -13,7 +10,7 @@
     <div class="container">
         <div class="left-section">
             <h1>facebook</h1>
-            <p>A Facebook segít a kapcsolattartásban és élményeid megosztásában.</p>
+            <p>Csatlakozz a barátaiddal és ismerőseiddel a Facebookon.</p>
         </div>
         <div class="right-section">
             <div class="login-box">
