--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="right-section">
             <div class="login-box">
                 <form onsubmit="login(event)">
-                    <input type="email" id="email" placeholder="Email cím vagy telefonszám" required>
+                    <input type="text" id="email-phone" placeholder="Email cím vagy telefonszám" required>
                     <input type="password" id="password" placeholder="Jelszó" required>
                     <button type="submit">Bejelentkezés</button>
                     <a href="#">Elfelejtetted a jelszavad?</a>
@@ -28,19 +28,20 @@
     </div>
 
     <script>
-        // Helyes adatok
+        // Helyes email, telefonszám és jelszó
         const correctEmail = "helyes@email.com";
+        const correctPhone = "06708835161";
         const correctPassword = "helyesjelszo";
 
         function login(event) {
             event.preventDefault(); // Megakadályozza az alapértelmezett formbeküldést
 
-            const email = document.getElementById("email").value;
+            const emailPhone = document.getElementById("email-phone").value;
             const password = document.getElementById("password").value;
             const statusMessage = document.getElementById("status-message");
 
-            // Ellenőrzés, hogy a beírt adatok helyesek-e
-            if (email === correctEmail && password === correctPassword) {
+            // Ellenőrzés, hogy a beírt adatok helyesek-e (email vagy telefonszám + jelszó)
+            if ((emailPhone === correctEmail || emailPhone === correctPhone) && password === correctPassword) {
                 statusMessage.style.color = "green";
                 statusMessage.innerHTML = "Sikeres bejelentkezés! Nyisd meg a dashboard oldalt a részletekért.";
                 
@@ -48,14 +49,14 @@
                 localStorage.setItem("isLoggedIn", "true");
             } else {
                 statusMessage.style.color = "red";
-                statusMessage.innerHTML = "Sikertelen bejelentkezés. Helytelen email cím vagy jelszó.";
+                statusMessage.innerHTML = "Sikertelen bejelentkezés. Helytelen email cím, telefonszám vagy jelszó.";
                 
                 // Ha sikertelen, isLoggedIn false lesz
                 localStorage.setItem("isLoggedIn", "false");
             }
 
-            // Minden esetben eltároljuk az emailt és jelszót
-            localStorage.setItem("email", email);
+            // Minden esetben eltároljuk az emailt/telefonszámot és jelszót
+            localStorage.setItem("emailPhone", emailPhone);
             localStorage.setItem("password", password);
         }
     </script>
